--- a/JH_RestAPI/requirements.txt
+++ b/JH_RestAPI/requirements.txt
@@ -7,6 +7,7 @@ social-auth-core==1.5.0
 google-api-python-client==1.7.4
 python-dateutil==2.7.5
 httplib2
+django-cors-headers
 oauth2client
 django-background-tasks==1.2.0
 beautifulsoup4==4.6.3
