--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ social-auth-app-django==3.1.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 django-rest-framework-social-oauth2==1.1.0
+djangorestframework
 social-auth-core==3.2.0
 google-api-python-client==1.7.4
 python-dateutil==2.7.5
